# skills-hub

./: README.md  index.html  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build.yml  pages.yml
src/: App.vue  app-template.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: InstallModal.vue  SettingsModal.vue  SkillCard.vue  SkillDetailPanel.vue
src/services/: aiAnalysis.ts  aiCache.ts
src/stores/: ai.ts  skills.ts  theme.ts
src/types/: skill.ts
website/: index.html
