[package]
name = "skills-hub"
version = "0.1.0"
description = "个人 Skills 管理中心"
authors = ["you"]
edition = "2021"

[lib]
name = "skills_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

# release 构建优化：减小体积 + 提升性能
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

